--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "latest": "github:tanstack/react-query",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
