--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "latest": "github:tanstack/react-query",
     "next": "latest",
+    "papaparse": "^5.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
