--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.32.2",
     "next": "latest",
     "papaparse": "^5.3.2",
     "react": "18.2.0",
